Disable deprecation warnings in visual studio 2017.

--- a/asio/CMakeLists.txt
+++ b/asio/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(asio src/asio.cpp)
 
 target_include_directories(asio PUBLIC include)
-target_compile_definitions(asio PUBLIC "-DASIO_STANDALONE" "-DASIO_SEPARATE_COMPILATION")
+target_compile_definitions(asio PUBLIC "-DASIO_STANDALONE" "-DASIO_SEPARATE_COMPILATION" "-D_SILENCE_CXX17_ALLOCATOR_VOID_DEPRECATION_WARNING")
 set_target_properties(asio PROPERTIES FOLDER "External/asio")
